crates/lang/macro/tests/ui/fail/S-06-event-as-storage.stderr
error: encountered conflicting pro! attribute argument
 --> $DIR/S-06-event-as-storage.rs:6:11
  |
6 |     #[pro(storage)] // We cannot have #[pro(storage)] if we already have #[pro(event)]
  |           ^^^^^^^
